# habitat_cv

./: CMakeLists.txt  fix_pixci_drivers
catchtests/: camera_array.cpp  composite.cpp  core.cpp  detection.cpp  image.cpp  layout.cpp  layouts.h  subtraction.cpp  video.cpp
config/: EPIX_3cam.fmt  EPIX_3cam2.fmt  EPIX_H.fmt  EPIX_IR.fmt  EPIX_fast.fmt  EPIX_hete.fmt  EPIX_hete2.fmt  EPIX_hete3.fmt  EPIX_hete4.fmt  EPIX_new.fmt  agent_tracker_config.json  camera_config.json  camera_config_hab2.json  camera_order.config  copy_EPIX  homography_hab1.json  homography_hab2.json  pid.json  robot_operational_limits.json  stitcher.config  sync_led_locations_hab2.json  tick_robot_moves.json
fake_camera/: agent  clear
include/: bg_subtraction.h  camera.h  cleaner.h  composite.h  core.h  detection.h  habitat_cv.h  stitcher.h
include/habitat_cv/: background.h  bg_subtraction.h  camera.h  camera_array.h  camera_configuration.h  cleaner.h  composite.h  core.h  cv_service.h  detection.h  frame_rate.h  image.h  layout.h  layouts.h  threshold.h  util.h  video.h
python/: autonomous_robot.py  autonomous_robot_B.py  autonomous_tick_robot.py  fix_frame_numbering.py  map_editor.py  robot_control_test.py
scripts/: fix_log  reverse_videos
src/: background.cpp  bg_subtraction.cpp  camera.cpp  camera_array.cpp  camera_configuration.cpp  cleaner.cpp  composite.cpp  core.cpp  cv_service.cpp  detection.cpp  fake_camera.cpp  frame_rate.cpp  image.cpp  layout.cpp  layouts.cpp  stitcher.cpp  test.cpp  util.cpp  video.cpp
src/tools/: agent_tracker.cpp  agent_tracker_B.cpp  camera_test.cpp  control_frame_shift.cpp  create_paths.cpp  homography.cpp  reverse_videos_logs.cpp
